@@ -111,7 +111,6 @@ import java.math.BigDecimal;
 import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
-import java.net.URL;
 import java.util.ArrayList;
 import java.util.Currency;
 import java.util.HashMap;
@@ -191,6 +190,13 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
     private boolean liveCallModification = false;
     private boolean recordingCall = true;
     protected boolean isParserFailed = false;
+    protected boolean playWaitUrlPending = false;
+    Tag conferenceVerb;
+    List<URI> conferenceWaitUris;
+    private boolean playMusicForConference = false;
+    //Used for system apps, such as when WebRTC client is dialing out.
+    //The rcml will be used instead of download the RCML
+    private String rcml;
 
     // Call bridging
     private final ActorRef bridgeManager;
@@ -199,7 +205,7 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
     public VoiceInterpreter(final Configuration configuration, final Sid account, final Sid phone, final String version,
                             final URI url, final String method, final URI fallbackUrl, final String fallbackMethod, final URI statusCallback,
                             final String statusCallbackMethod, final String emailAddress, final ActorRef callManager,
-                            final ActorRef conferenceManager, final ActorRef bridgeManager, final ActorRef sms, final DaoManager storage, final ActorRef monitoring) {
+                            final ActorRef conferenceManager, final ActorRef bridgeManager, final ActorRef sms, final DaoManager storage, final ActorRef monitoring, final String rcml) {
         super();
         final ActorRef source = self();
         downloadingRcml = new State("downloading rcml", new DownloadingRcml(source), null);
@@ -233,6 +239,7 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
         transitions.add(new Transition(acquiringCallInfo, initializingCall));
         transitions.add(new Transition(acquiringCallInfo, downloadingRcml));
         transitions.add(new Transition(acquiringCallInfo, finished));
+        transitions.add(new Transition(acquiringCallInfo, ready));
         transitions.add(new Transition(initializingCall, downloadingRcml));
         transitions.add(new Transition(initializingCall, ready));
         transitions.add(new Transition(initializingCall, finishDialing));
@@ -271,7 +278,10 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
         transitions.add(new Transition(sendingEmail, finished));
         transitions.add(new Transition(sendingEmail, finishDialing));
         transitions.add(new Transition(caching, finished));
+        transitions.add(new Transition(caching, conferencing));
+        transitions.add(new Transition(caching, finishConferencing));
         transitions.add(new Transition(playing, ready));
+        transitions.add(new Transition(playing, finishConferencing));
         transitions.add(new Transition(playing, finished));
         transitions.add(new Transition(synthesizing, finished));
         transitions.add(new Transition(redirecting, ready));
@@ -352,6 +362,9 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
         transitions.add(new Transition(conferencing, finishConferencing));
         transitions.add(new Transition(conferencing, hangingUp));
         transitions.add(new Transition(conferencing, finished));
+        transitions.add(new Transition(conferencing, checkingCache));
+        transitions.add(new Transition(conferencing, caching));
+        transitions.add(new Transition(conferencing, playing));
         transitions.add(new Transition(finishConferencing, ready));
         transitions.add(new Transition(finishConferencing, faxing));
         transitions.add(new Transition(finishConferencing, sendingEmail));
@@ -409,9 +422,11 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
             logger.error("URISyntaxException while trying to resolve Cache URI: " + e);
         }
         uri = uri + accountId.toString();
+        playMusicForConference = Boolean.parseBoolean(runtime.getString("play-music-for-conference","false"));
         this.cache = cache(path, uri);
         this.downloader = downloader();
         this.monitoring = monitoring;
+        this.rcml = rcml;
     }
 
     private boolean is(State state) {
@@ -542,7 +557,15 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
 
                 final String direction = callInfo.direction();
                 if ("inbound".equals(direction)) {
-                    fsm.transition(message, downloadingRcml);
+                    if (rcml!=null && !rcml.isEmpty()) {
+                        if (logger.isInfoEnabled()) {
+                            logger.info("System app is present will proceed to ready state, system app: "+rcml);
+                        }
+                        createInitialCallRecord((CallResponse<CallInfo>) message);
+                        fsm.transition(message, ready);
+                    } else {
+                        fsm.transition(message, downloadingRcml);
+                    }
                 } else {
                     fsm.transition(message, initializingCall);
                 }
@@ -695,6 +718,12 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
                     conferenceState = event.state();
                     conferenceStateModeratorPresent(message);
                     break;
+                case COMPLETED:
+                    conferenceState = event.state();
+                    // At this point i think we should call finishConferencing,
+                    // who will tell conference center to destroy the conference.
+                    fsm.transition(message, finishConferencing);
+                    break;
                 default:
                     break;
             }
@@ -710,6 +739,29 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
                     + ", statusCode " + response.get().getStatusCode());
             }
             if (response.succeeded() && HttpStatus.SC_OK == response.get().getStatusCode()) {
+                if (conferencing.equals(state)) {
+                    //This is the downloader response for Conferencing waitUrl
+                    if (parser != null) {
+                        getContext().stop(parser);
+                        parser = null;
+                    }
+                    final String type = response.get().getContentType();
+                    if (type != null) {
+                        if (type.contains("text/xml") || type.contains("application/xml") || type.contains("text/html")) {
+                            parser = parser(response.get().getContentAsString());
+                        } else if (type.contains("audio/wav") || type.contains("audio/wave") || type.contains("audio/x-wav")) {
+                            parser = parser("<Play>" + request.getUri() + "</Play>");
+                        } else if (type.contains("text/plain")) {
+                            parser = parser("<Say>" + response.get().getContentAsString() + "</Say>");
+                        }
+                    } else {
+                        //If the waitUrl is invalid then move to notFound
+                        fsm.transition(message, hangingUp);
+                    }
+                    final GetNextVerb next = GetNextVerb.instance();
+                    parser.tell(next, self());
+                    return;
+                }
                 if (dialBranches == null || dialBranches.size()==0) {
                     if(logger.isInfoEnabled()) {
                         logger.info("Downloader response is success, moving to Ready state");
@@ -729,6 +781,20 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
         } else if (DiskCacheResponse.class.equals(klass)) {
             final DiskCacheResponse response = (DiskCacheResponse) message;
             if (response.succeeded()) {
+                if (playWaitUrlPending && play.equals(verb.name())) {
+                    fsm.transition(message, conferencing);
+                    return;
+                }
+                //Because of RMS issue https://github.com/RestComm/mediaserver/issues/158 we cannot have List<URI> for waitUrl
+//                if (playWaitUrlPending) {
+//                    if (conferenceWaitUris == null)
+//                        conferenceWaitUris = new ArrayList<URI>();
+//                    URI waitUrl = response.get();
+//                    conferenceWaitUris.add(waitUrl);
+//                    final GetNextVerb next = GetNextVerb.instance();
+//                    parser.tell(next, self());
+//                    return;
+//                }
                 if (caching.equals(state) || checkingCache.equals(state)) {
                     if (play.equals(verb.name()) || say.equals(verb.name())) {
                         fsm.transition(message, playing);
@@ -759,6 +825,20 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
         } else if (Tag.class.equals(klass)) {
             // final Tag verb = (Tag) message;
             verb = (Tag) message;
+            if (playWaitUrlPending) {
+                if (!(play.equals(verb.name()) || say.equals(verb.name()))) {
+                    if (logger.isInfoEnabled()) {
+                        logger.info("Tag for waitUrl is neither Play or Say");
+                    }
+                    fsm.transition(message, hangingUp);
+                }
+                if (say.equals(verb.name())) {
+                    fsm.transition(message, checkingCache);
+                } else if (play.equals(verb.name())) {
+                    fsm.transition(message, caching);
+                }
+                return;
+            }
             if (CallStateChanged.State.RINGING == callState) {
                 if (reject.equals(verb.name())) {
                     fsm.transition(message, rejecting);
@@ -796,6 +876,12 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
                 invalidVerb(verb);
             }
         } else if (End.class.equals(klass)) {
+            //Because of RMS issue https://github.com/RestComm/mediaserver/issues/158 we cannot have List<URI> for waitUrl
+//            if (playWaitUrlPending && conferenceWaitUris != null && conferenceWaitUris.size() > 0) {
+//                playWaitUrl(conferenceWaitUris, self());
+//                playWaitUrlPending = false;
+//                return;
+//            }
             if (callState.equals(CallStateChanged.State.COMPLETED)) {
                 fsm.transition(message, finished);
             } else {
@@ -1157,68 +1243,72 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
         @Override
         public void execute(final Object message) throws Exception {
             final Class<?> klass = message.getClass();
-            final CallDetailRecordsDao records = storage.getCallDetailRecordsDao();
             if (CallResponse.class.equals(klass)) {
-                final CallResponse<CallInfo> response = (CallResponse<CallInfo>) message;
-                callInfo = response.get();
-                callState = callInfo.state();
-                if (callInfo.direction().equals("inbound")) {
-                    callRecord = records.getCallDetailRecord(callInfo.sid());
-                    if (callRecord == null) {
-                        // Create a call detail record for the call.
-                        final CallDetailRecord.Builder builder = CallDetailRecord.builder();
-                        builder.setSid(callInfo.sid());
-                        builder.setInstanceId(RestcommConfiguration.getInstance().getMain().getInstanceId());
-                        builder.setDateCreated(callInfo.dateCreated());
-                        builder.setAccountSid(accountId);
-                        builder.setTo(callInfo.to());
-                        if (callInfo.fromName() != null) {
-                            builder.setCallerName(callInfo.fromName());
-                        } else {
-                            builder.setCallerName("Unknown");
-                        }
-                        if (callInfo.from() != null) {
-                            builder.setFrom(callInfo.from());
-                        } else {
-                            builder.setFrom("Unknown");
-                        }
-                        builder.setForwardedFrom(callInfo.forwardedFrom());
-                        builder.setPhoneNumberSid(phoneId);
-                        builder.setStatus(callState.toString());
-                        final DateTime now = DateTime.now();
-                        builder.setStartTime(now);
-                        builder.setDirection(callInfo.direction());
-                        builder.setApiVersion(version);
-                        builder.setPrice(new BigDecimal("0.00"));
-                        // TODO implement currency property to be read from Configuration
-                        builder.setPriceUnit(Currency.getInstance("USD"));
-                        final StringBuilder buffer = new StringBuilder();
-                        buffer.append("/").append(version).append("/Accounts/");
-                        buffer.append(accountId.toString()).append("/Calls/");
-                        buffer.append(callInfo.sid().toString());
-                        final URI uri = URI.create(buffer.toString());
-                        builder.setUri(uri);
-
-                        builder.setCallPath(call.path().toString());
-
-                        callRecord = builder.build();
-                        records.addCallDetailRecord(callRecord);
-                        //
-                        // if (liveCallModification) {
-                        // logger.info("There is no CallRecord for this call but this is a LiveCallModificatin request. Will acquire call media group");
-                        // fsm.transition(message, acquiringCallMediaGroup);
-                        // return;
-                        // }
-                    }
-
-                    // Update the application.
-                    callback();
-                }
+                createInitialCallRecord((CallResponse<CallInfo>) message);
             }
             // Ask the downloader to get us the application that will be executed.
             final List<NameValuePair> parameters = parameters();
             request = new HttpRequestDescriptor(url, method, parameters);
             downloader.tell(request, source);
+        }
+    }
+
+    private void createInitialCallRecord(CallResponse<CallInfo> message) {
+        final CallDetailRecordsDao records = storage.getCallDetailRecordsDao();
+        final CallResponse<CallInfo> response = message;
+        callInfo = response.get();
+        callState = callInfo.state();
+        if (callInfo.direction().equals("inbound")) {
+            callRecord = records.getCallDetailRecord(callInfo.sid());
+            if (callRecord == null) {
+                // Create a call detail record for the call.
+                final CallDetailRecord.Builder builder = CallDetailRecord.builder();
+                builder.setSid(callInfo.sid());
+                builder.setInstanceId(RestcommConfiguration.getInstance().getMain().getInstanceId());
+                builder.setDateCreated(callInfo.dateCreated());
+                builder.setAccountSid(accountId);
+                builder.setTo(callInfo.to());
+                if (callInfo.fromName() != null) {
+                    builder.setCallerName(callInfo.fromName());
+                } else {
+                    builder.setCallerName("Unknown");
+                }
+                if (callInfo.from() != null) {
+                    builder.setFrom(callInfo.from());
+                } else {
+                    builder.setFrom("Unknown");
+                }
+                builder.setForwardedFrom(callInfo.forwardedFrom());
+                builder.setPhoneNumberSid(phoneId);
+                builder.setStatus(callState.toString());
+                final DateTime now = DateTime.now();
+                builder.setStartTime(now);
+                builder.setDirection(callInfo.direction());
+                builder.setApiVersion(version);
+                builder.setPrice(new BigDecimal("0.00"));
+                // TODO implement currency property to be read from Configuration
+                builder.setPriceUnit(Currency.getInstance("USD"));
+                final StringBuilder buffer = new StringBuilder();
+                buffer.append("/").append(version).append("/Accounts/");
+                buffer.append(accountId.toString()).append("/Calls/");
+                buffer.append(callInfo.sid().toString());
+                final URI uri = URI.create(buffer.toString());
+                builder.setUri(uri);
+
+                builder.setCallPath(call.path().toString());
+
+                callRecord = builder.build();
+                records.addCallDetailRecord(callRecord);
+                //
+                // if (liveCallModification) {
+                // logger.info("There is no CallRecord for this call but this is a LiveCallModificatin request. Will acquire call media group");
+                // fsm.transition(message, acquiringCallMediaGroup);
+                // return;
+                // }
+            }
+
+            // Update the application.
+            callback();
         }
     }
 
@@ -1308,6 +1398,12 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
                     source.tell(stop, source);
                     return;
                 }
+            } else if ((message instanceof CallResponse) && (rcml != null && !rcml.isEmpty())) {
+                if (parser != null) {
+                    context.stop(parser);
+                    parser = null;
+                }
+                parser = parser(rcml);
             } else if (pausing.equals(state)) {
                 context.setReceiveTimeout(Duration.Undefined());
             }
@@ -2176,8 +2272,15 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
 
         @Override
         public void execute(final Object message) throws Exception {
+            if (message instanceof DiskCacheResponse) {
+                URI waitUrl = ((DiskCacheResponse)message).get();
+                playWaitUrl(waitUrl, self());
+                playWaitUrlPending = false;
+                return;
+            }
             final NotificationsDao notifications = storage.getNotificationsDao();
             final Tag child = conference(verb);
+            conferenceVerb = verb;
 
             // Mute
             Attribute attribute = child.attribute("muted");
@@ -2202,11 +2305,23 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
                 }
             }
 
+            if (logger.isInfoEnabled()) {
+                logger.info("At conferencing state, playMusicForConference: "+playMusicForConference+" conferenceInfo.participants().size(): "+conferenceInfo.participants().size());
+            }
+            if (playMusicForConference && startConferenceOnEnter) {
+                //playMusicForConference is true, take over control of startConferenceOnEnter
+                if (conferenceInfo.participants().size() == 1) {
+                    startConferenceOnEnter = false;
+                } else  if (conferenceInfo.participants().size() > 1) {
+                    startConferenceOnEnter = true;
+                }
+            }
+
             if (!startConferenceOnEnter && conferenceState == ConferenceStateChanged.State.RUNNING_MODERATOR_ABSENT) {
                 if (!muteCall) {
                     final Mute mute = new Mute();
                     if(logger.isInfoEnabled()) {
-                        logger.info("Muting the call as startConferenceOnEnter =" + startConferenceOnEnter + " callMuted = "
+                        logger.info("Muting the call as startConferenceOnEnter =" + startConferenceOnEnter + " , callMuted = "
                             + muteCall);
                     }
                     call.tell(mute, source);
@@ -2215,14 +2330,12 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
                 // Only play background music if conference is not doing that already
                 // If conference state is RUNNING_MODERATOR_ABSENT and participants > 0 then BG music is playing already
                 if(logger.isInfoEnabled()) {
-                    logger.info("Play background music? " + conferenceInfo.participants().size());
+                    logger.info("Play background music? " + (conferenceInfo.participants().size() == 1));
                 }
                 boolean playBackground = conferenceInfo.participants().size() == 1;
                 if (playBackground) {
                     // Parse wait url.
-                    URI waitUrl = new URL(
-                            "http://127.0.0.1:8080/restcomm/music/rock/nickleus_-_original_guitar_song_200907251723.wav")
-                            .toURI();
+                    URI waitUrl = new URI("/restcomm/music/electronica/teru_-_110_Downtempo_Electronic_4.wav");
                     attribute = child.attribute("waitUrl");
                     if (attribute != null) {
                         String value = attribute.value();
@@ -2261,9 +2374,20 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
                         }
                     }
 
+                    if (!waitUrl.getPath().toLowerCase().endsWith("wav")) {
+                        if (logger.isInfoEnabled()) {
+                            logger.info("WaitUrl for Conference will use RCML from URI: "+waitUrl.toString());
+                        }
+                        final List<NameValuePair> parameters = parameters();
+                        request = new HttpRequestDescriptor(waitUrl, method, parameters);
+                        downloader.tell(request, self());
+                        playWaitUrlPending = true;
+                        return;
+                    }
+
                     // Tell conference to play music to participants on hold
-                    if (waitUrl != null) {
-                        conference.tell(new Play(waitUrl, Short.MAX_VALUE), super.source);
+                    if (waitUrl != null && !playWaitUrlPending) {
+                        playWaitUrl(waitUrl, super.source);
                     }
                 }
             } else if (conferenceState == ConferenceStateChanged.State.RUNNING_MODERATOR_ABSENT) {
@@ -2286,6 +2410,15 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
         }
     }
 
+    //Because of RMS issue https://github.com/RestComm/mediaserver/issues/158 we cannot have List<URI> for waitUrl
+    protected void playWaitUrl(final List<URI> waitUrls, final ActorRef source) {
+        conference.tell(new Play(waitUrls, Short.MAX_VALUE), source);
+    }
+
+    protected void playWaitUrl(final URI waitUrl, final ActorRef source) {
+        conference.tell(new Play(waitUrl, Short.MAX_VALUE), source);
+    }
+
     private final class FinishConferencing extends AbstractDialAction {
         public FinishConferencing(final ActorRef source) {
             super(source);
@@ -2301,7 +2434,7 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
             }
 
             // Clean up
-            if (ConferenceStateChanged.class.equals(message)) {
+            if (message instanceof ConferenceStateChanged) {
                 // Destroy conference if state changed to completed (last participant in call)
                 ConferenceStateChanged confStateChanged = (ConferenceStateChanged) message;
                 if (ConferenceStateChanged.State.COMPLETED.equals(confStateChanged.state())) {
@@ -2315,7 +2448,7 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
             final NotificationsDao notifications = storage.getNotificationsDao();
 
             // Parse "action".
-            Attribute attribute = verb.attribute("action");
+            Attribute attribute = conferenceVerb.attribute("action");
             if (attribute != null) {
                 String action = attribute.value();
                 if (action != null && !action.isEmpty()) {
@@ -2335,7 +2468,7 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
                     final URI uri = UriUtils.resolve(base, target);
                     // Parse "method".
                     String method = "POST";
-                    attribute = verb.attribute("method");
+                    attribute = conferenceVerb.attribute("method");
                     if (attribute != null) {
                         method = attribute.value();
                         if (method != null && !method.isEmpty()) {
@@ -2410,7 +2543,7 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
             if (conference != null) {
                 // Parse "endConferenceOnExit"
                 boolean endOnExit = false;
-                final Tag child = conference(verb);
+                final Tag child = conference(conferenceVerb);
                 Attribute attribute = child.attribute("endConferenceOnExit");
 
                 if (attribute != null) {
